# health-keeper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
apps/web/: index.html
config/: config.yaml.example
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ai/: mod.rs
crates/core/src/ai/llm/: anthropic.rs  mod.rs  ollama.rs
crates/core/src/ai/ocr/: mod.rs  paddle.rs  vision.rs
crates/core/src/config/: mod.rs
crates/core/src/models/: attachment.rs  common.rs  extracted_data.rs  mod.rs  person.rs  visit.rs
crates/core/src/storage/: mod.rs  sqlite.rs
crates/core/src/sync/: mod.rs
crates/core/tests/: storage_test.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/superpowers/plans/: 2026-03-26-ui-redesign-plan.md
docs/superpowers/specs/: 2026-03-26-ui-redesign-design.md
migrations/: 001_init.sql  002_allow_null_visit_id.sql  003_add_summary.sql  004_add_health_info.sql  005_add_processed.sql
