[package]
name = "health-keeper-cli"
description = "Command-line interface for HealthKeeper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hk"
path = "src/main.rs"

[dependencies]
health-keeper-core = { path = "../core" }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
mime_guess = "2"
serde_yaml.workspace = true