[package]
name = "health-keeper-core"
description = "Core library for HealthKeeper medical records management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
config.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true

[dev-dependencies]
tokio-test = "0.4"