[package]
name = "health-keeper-ffi"
description = "FFI bindings for HealthKeeper (Android/macOS)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
health-keeper-core = { path = "../core" }
tokio.workspace = true