[package]
name = "health-keeper-server"
description = "Web server for HealthKeeper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hk-server"
path = "src/main.rs"

[dependencies]
health-keeper-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
async-stream = "0.3"

# Async traits
async-trait.workspace = true

# Additional deps
sha2.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true